--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #000000;
+    background-color: #ffffff;
     color: #fff;
     display: flex;
     justify-content: center;
@@ -20,13 +20,13 @@ body {
   h1 {
     font-size: 2.5rem;
     margin-bottom: 1.5rem;
-    color: #ffd700;
+    color: #000677;
   }
   
   h2 {
     font-size: 2rem;
     margin-bottom: 1rem;
-    color: #ffd700;
+    color: #000677;
   }
   
   /* Social Media Buttons */
@@ -47,8 +47,8 @@ body {
     align-items: center;
     justify-content: center;
     padding: 0.8rem 1.5rem;
-    background-color: #0073e6;
-    color: #fff;
+    background-color: #fffb00;
+    color: #000677;
     text-decoration: none;
     border-radius: 10px;
     font-size: 1rem;
