--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: #ffffff; /* White background */
+  background-color: #fffb00; /* Yellow background */
   color: #000677; /* Blue text */
   display: flex;
   justify-content: center;
